--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,9 +13,37 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    .approveBtn {
+        @apply p-[0.7rem_3rem] rounded-[0.5rem] text-white-900 text-sm transition-all ease-in duration-75;
+    }
+}
 
-input::-webkit-input-placeholder:after /* Only for Chrome */
-{
-    color:red;
-    content:"*";
+.ReactModal__Overlay {
+    opacity: 0;
+    transition: opacity 0.1s ease-in-out;
+    z-index: 50;
+    overflow: auto;
+}
+
+.ReactModal__Overlay--after-open {
+    opacity: 1;
+    background-color: rgba(0, 0, 0, 0.5) !important;
+    backdrop-filter: blur(5px) !important;
+}
+
+.ReactModal__Overlay--before-close {
+    opacity: 0;
+}
+
+.ReactModal__Content {
+    width: 50%;
+    inset: auto !important;
+    border-radius: 8px !important;
+    background-color: #eff4f2 !important;
+    left: 50% !important;
+    top: 50% !important;
+    padding: 3rem !important;
+    transform: translate(-50%, -50%) !important;
+    filter: none;
 }
