--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -47,3 +47,7 @@
     transform: translate(-50%, -50%) !important;
     filter: none;
 }
+
+.firstUppercase:first-letter{
+    text-transform: uppercase;
+}
